2001-07-19  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_model_get_children): Implement.
	
	* parse.pl.in (xst_parse_xml): Use new return convention of
	  xst_xml_model_scan ().
	  (xst_parse_xml_child_names): Renamed from xst_parse_xml_children ().
	  Use new return convention of xst_xml_model_scan ().
	  (xst_parse_alchemist): Implement.
	  (xst_parse_alchemist_print): Implement.
	  (xst_parse_alchemist_print_option): Implement.
		
	* replace.pl.in (xst_replace_alchemist): Add in alchemist's base data path.
	  (xst_replace_alchemist_print): Implement.
	  (xst_replace_alchemist_print_option): Implement.
		
	* print.pl.in (xst_print_printers_get_rh71): Use
	  xst_parse_xml_child_names ().
	  (xst_print_get_printer_parse_table): Begin rh71 table, not complete yet.
	  (xst_print_get_printer_replace_table): Begin rh71 table, not complete yet.

2001-07-18  Arturo Espinosa Aldama  <arturo@ximian.com>

	* file.pl.in (xst_file_run): Accept a flag arg $background
	that will run the command on background.
	(xst_file_run_bg): Wrapper to this.

	* users-conf.in (set): Call write_profiles.
	(xml_parse): Call xml_parse_profiles.
	(xml_parse_profiles): Get "profiles" tag contents from read
	xml document and set it in "profiles" key of data hash.
	(write_profiles): If $$hash{"profiles"} is not empty,
	save it to profiles.xml location.
	(xml_parse_users): Ignore profiles tag.
	(xml_parse_profiles): Profiles record is a ref to an array.

	* xml.pl.in (xst_xml_scan_recurse): Removed use of global
	array xst_xml_scan_list.
	(xst_xml_scan): Now optionally receives a tool structure.
	The read document is stored inside the tool structure.

	* users-conf.in (add_user): mkdir -p the parent directories
	of the new user.
	(get): receive tool as argument. This structure is passed
	to all directive handlers by xml_run_directive as the first
	argument.
	(set): same. Pass it to xml_parse.
	(filter): same.
	
2001-07-18  Hans Petter Jansson  <hpj@ximian.com>
