@@ -179,7 +179,6 @@ sub xst_print_get_printer_parse_table
       printers_get => \&xst_print_printers_get_rh71,
 	    fn =>
 	    {
-        PRINTCAP   => "/etc/printcap",
         PRINTCONF  => "/etc/alchemist/namespace/printconf/local.adl",
         PRINTER    => "#printer#"
       },
@@ -188,13 +187,14 @@ sub xst_print_get_printer_parse_table
 #        [ "spooldir",           \&xst_parse_printcap,       [PRINTCAP,  PRINTER],    "sd" ],
 #        [ "jobsize_max_k",      \&xst_parse_printcap,       [PRINTCAP,  PRINTER],    "mx" ],
 #        [ "suppress_headers",   \&xst_parse_printcap_bool,  [PRINTCAP,  PRINTER],    "sh" ],
-#        [ "device",             \&xst_parse_printcap,       [PRINTCAP,  PRINTER],    "lp" ],
-#        [ "filter",             \&xst_parse_printcap,       [PRINTCAP,  PRINTER],    "if" ],
+        [ "device",             \&xst_parse_alchemist_print, [PRINTCONF,  PRINTER], "queue_data/local_printer_device" ],
 #        [ "papersize",          \&xst_parse_sh_export,      GENERAL,    PAPERSIZE         ],
-#        [ "type",               \&xst_parse_sh_export,      GENERAL,    PRINTERTYPE       ],
 #        [ "ascii_to_ps",        \&xst_parse_sh_export_bool, GENERAL,    ASCII_TO_PS       ],
-#        [ "gsdevice",           \&xst_parse_sh,             POSTSCRIPT, GSDEVICE          ],
-#        [ "resolution",         \&xst_parse_sh,             POSTSCRIPT, RESOLUTION        ],
+        [ "filter_type",        \&xst_parse_alchemist_print, [PRINTCONF, PRINTER], "filter_type" ],
+        [ "type",               \&xst_parse_alchemist_print, [PRINTCONF, PRINTER], "queue_type" ],
+        [ "printer_id",         \&xst_parse_alchemist_print, [PRINTCONF, PRINTER], "filter_data/printer_id" ],
+         [ "gsdevice",           \&xst_parse_alchemist_print, [PRINTCONF, PRINTER], "filter_data/gs_driver" ],
+         [ "resolution",         \&xst_parse_alchemist_print_option, [PRINTCONF, PRINTER], "Resolution" ],
 #        [ "color",              \&xst_parse_sh,             POSTSCRIPT, COLOR             ],
 #        [ "gs_papersize",       \&xst_parse_sh,             POSTSCRIPT, PAPERSIZE         ],
 #        [ "gs_options",         \&xst_parse_sh,             POSTSCRIPT, EXTRA_GS_OPTIONS  ],
@@ -267,10 +267,9 @@ sub xst_print_get_printer_replace_table
     "redhat-7.1" =>
 	  {
       printers_get   => \&xst_print_printers_get_rh71,
-      printer_remove => \&xst_replace_printcap_remove_printer,
+      printer_remove => \&xst_replace_printcap_remove_printer,  # FIXME: Replace this.
 	    fn =>
 	    {
-        PRINTCAP   => "/etc/printcap",
         PRINTCONF  => "/etc/alchemist/namespace/printconf/local.adl",
         PRINTER    => "#printer#"
       },
